# akashic-codex

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
docs/: DESIGN.md  demo.sh
examples/: semantic_search.txt  sqlite_decision.txt  weeknight_pasta.txt
src/akashic_codex/: __init__.py  api.py  cli.py  db.py  embeddings.py  ingest.py  mcp_server.py  search.py
tests/: conftest.py  test_api.py  test_cli.py  test_mcp.py  test_smoke.py
