[project]
name = "akashic-codex"
version = "0.1.0"
description = "A local, model-agnostic memory store for AI conversations."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: import sorting, UP: pyupgrade,
# B: bugbear (likely bugs), SIM: simplifications.
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
