[project]
name = "akashic-codex"
version = "0.1.0"
description = "A local, model-agnostic memory store for AI conversations."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    # Third-party only: Starlette's TestClient warns about a future httpx2
    # migration we don't control. Silence just this one; all other warnings
    # (including our own deprecations) stay visible.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: import sorting, UP: pyupgrade,
# B: bugbear (likely bugs), SIM: simplifications.
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency/parameter helpers are designed to be called in argument
# defaults; that is the framework's intended pattern, not the B008 footgun.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
]
